feat():更新到新版rsuite语法，添加新的代码段

--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "Snippets"
   ],
   "contributes": {
-    "snippets": [{
+    "snippets": [
+      {
         "language": "html",
         "path": "./snippets/snippets.json"
       },
